Bug 440895 - Add support for Mac OSX spaces in session restore, which allows any window to be restored to their respective (work)space. r=mconley,mstange,nika

Differential Revision: https://phabricator.services.mozilla.com/D61457

--HG--
extra : moz-landing-system : lando